# forTheBeans

./: .RData  .Rhistory  Compression Draft Users Guide.docx  Demos.java  HaarTransform.java  README.md  Tone_v2.txt  Wave.java  new_fft_global_threshold.r
AudioBackend/src/com/pumaj/servlets/: AudioServlet.java
Frontend/: Wave.java  home.html
Frontend/audio-feeder-0.4.5/audio-feeder-0.4.5/: AudioFeeder.js  AudioFeeder.min.js  demo.js
JWave/src/: ByteTest.java  Demo.java  Frontend.java  Main.java  Operators.java  Wave.java  WavePlayer.java  downsample.R  player2.java  test.java
JWave/src/DesktopPlayer/: DesktopPlayer.java  Operators.java  PlayerPanel.form  PlayerPanel.java  Wave.java  timeSlider.java
JWave/src/files/: Frontend.java  InvalidParamException.java  R8B.java
JWave/src/files/rObjects/: test.txt
r8brain-free-src-master/: CMakeLists.txt  custom.cpp
src/: index.html
src/app/: app.component.html  app.component.ts  app.module.ts  file-upload.component.html  fileuploader.ts  playback.component.html  playback.component.ts  test_json_creater.ts
src/com/pumaj/servlets/: AudioServlet.java  InvalidParamException.java  Operators.java  Wave.java
